updated the schema

--- a/public/index.html
+++ b/public/index.html
@@ -366,19 +366,30 @@
         ga('send', 'pageview');
     
     </script>
-    <script type="application/ld+json">
+<script type="application/ld+json">
     {
-      "@context": "http://schema.org",
-      "@type": "Person",
-      "name": "Frederick Vanbrabant",
-      "url": "http://www.frederickvanbrabant.com",
-      "sameAs": [
-        "https://twitter.com/maybeFrederick",
-        "https://www.linkedin.com/in/frederickvanbrabant/",
-        "https://github.com/vanbrabantf",
-        "https://symposiumapp.com/u/frederick",
-        "http://www.speakersbase.com/frederick-vanbrabant"
-      ]
+        "@context" : "http://schema.org",
+        "@type" : "BlogPosting",
+        "mainEntityOfPage": {
+             "@type": "WebPage",
+             "@id": "https:\/\/frederickvanbrabant.com"
+        },
+        "articleSection" : "",
+        "name" : "Frederick Vanbrabant delirious rantings",
+        "headline" : "Frederick Vanbrabant delirious rantings",
+        "description" : "",
+        "inLanguage" : "en-US",
+        "author" : "Frederick Vanbrabnt",
+        "creator" : "Frederick Vanbrabnt",
+        "publisher": "Frederick Vanbrabnt",
+        "accountablePerson" : "Frederick Vanbrabnt",
+        "copyrightHolder" : "Frederick Vanbrabnt",
+        "copyrightYear" : "2019",
+        "datePublished": "2019-05-09 00:00:00 \x2b0000 UTC",
+        "dateModified" : "2019-05-09 00:00:00 \x2b0000 UTC",
+        "url" : "https:\/\/frederickvanbrabant.com\/",
+        "wordCount" : "0",
+        "keywords" : [ "Blog" ]
     }
     </script>
     
